# migrating_Stock_AI_Engine

./: README.md  pyproject.toml  requirements.txt
app/: config.py  logging_config.py  main.py
app/agents/: behaviour_agent.py  decision_agent.py  fundamental_agent.py  fundametal_agent.py  news_agent.py  portfolio_agent.py  sentiment_agent.py  technical_agent.py
app/analysis/: diversification_analyzer.py  metrics_calculator.py  pattern_detector.py  portfolio_metrics_calculator.py  sector_mapper.py
app/api/: portfolio_api.py  scan_api.py  stock_api.py  trade_api.py
app/data/universe_providers/: gainer_provider.py
app/graphs/: portfolio_graph.py  scan_graph.py  stock_graph.py  trade_graph.py
app/schemas/: portfolio_schema.py  scan_schema.py  stock_schema.py  trade_schema.py
app/scoring/: opportunity_scorer.py
app/state/: portfolio_state.py  scan_state.py  stock_state.py  trade_state.py
app/tools/: fundamental_tool.py  indicator_tool.py  market_data_adaptor.py  market_data_tool.py  news_tool.py  portfolio_tools.py  stock_tools.py  trade_tools.py
