[project]
name = "stock-trading-ai-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.33.1",
    "tavily>=1.1.0",
    "tavily-python>=0.7.23",
    "uvicorn>=0.42.0",
    "yfinance>=1.2.0",
]
